# ClickClick

./: .gitignore  README.md  build.gradle  gradlew  gradlew.bat  settings.gradle  test.click
AndroidWrapper/: build.gradle
AndroidWrapper/src/main/java/xyz/imxqd/api/: AndroidWrapper.java
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/xyz/imxqd/clickclick/: ExampleInstrumentedTest.java
app/src/china/assets/: copyright.html
app/src/china/assets/migrations/ClickClick/: 0.sql
app/src/china/res/raw/: applications.json  common.json  global_control.json
app/src/international/: AndroidManifest.xml
app/src/international/assets/: copyright.html
app/src/international/assets/migrations/ClickClick/: 0.sql
app/src/international/res/raw/: applications.json  common.json  global_control.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/migrations/ClickClick/: 0.sql
app/src/main/assets/migrations/en/: 0.sql
app/src/main/assets/migrations/zh-rCN/: 0.sql
app/src/main/assets/migrations/zh-rTW/: 0.sql
app/src/main/java/xyz/imxqd/clickclick/: App.java  MyApp.java
app/src/main/jni/: EventInjector.c  EventInjector.h
app/src/main/res/anim/: slide_in_bottom.xml  slide_out_bottom.xml
app/src/main/res/drawable/: animated_refresh.xml  btn_bg_selector.xml  ic_dialog_add.xml  ic_dialog_close.xml  item_bg_selector.xml  line.xml  thumb.xml  thumb_drawable.xml  toolbar_shadow.xml
app/src/main/res/layout/: activity_add_func.xml  activity_add_home_event.xml  activity_alert_dialog.xml  activity_app_choose.xml  activity_code_editor.xml  activity_copy_right.xml  activity_functions.xml  activity_key_event.xml  activity_main.xml  activity_navi.xml  empty_view.xml  fragment_function.xml  fragment_functions.xml  fragment_key_event_map.xml  fragment_profile.xml  fragment_settings.xml  list_item_app.xml  list_item_func.xml  list_item_key_event_map.xml  list_item_profile.xml  list_item_remote_func.xml  title_layout.xml
app/src/main/res/layout-land/: activity_add_func.xml
app/src/main/res/menu/: app_list.xml  code_editor.xml  navigation.xml
app/src/main/res/raw/: applications.json  common.json  fun.json  keyevent.json  media.json  pages.json
app/src/main/res/raw-en/: fun.json  media.json
app/src/main/res/raw-zh/: fun.json  global_control.json
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  functions.xml  notification_package.xml  pref.xml  sp_strings.xml  string_arrays.xml  strings.xml  styles.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/values-zh-rCN/: arrays.xml  functions.xml  string_arrays.xml  strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: string_arrays.xml  strings.xml
app/src/main/res/xml/: accessibilityservice.xml  settgings_screen.xml  settings_debug.xml
app/src/main/res/xml-v22/: settgings_screen.xml
app/src/main/res/xml-v24/: accessibilityservice.xml
app/src/main/res/xml-v26/: accessibilityservice.xml
app/src/xposed/: AndroidManifest.xml
app/src/xposed/aidl/android/view/: KeyEvent.aidl
app/src/xposed/assets/: copyright.html  xposed_init
app/src/xposed/assets/migrations/ClickClick/: 0.sql
app/src/xposed/res/raw/: applications.json  common.json  global_control.json  media.json  pages.json
app/src/xposed/res/values/: pref.xml  sp_strings.xml  strings.xml
app/src/xposed/res/values-zh-rCN/: strings.xml
app/src/xposed/res/values-zh-rTW/: strings.xml
app/src/xposed/res/xml/: settgings_screen.xml
app/src/xposed/res/xml-v22/: settgings_screen.xml
codeeditor/: build.gradle
codeeditor/src/main/res/layout/: item_tab_file.xml
docs/: CNAME  index.md
eventinject/: build.gradle
eventinject/src/main/: AndroidManifest.xml
eventinject/src/main/jni/: CMakeLists.txt  EventInjector.c  input.c  uinput.h
eventinject/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
luacore/: build.gradle
luacore/src/main/: AndroidManifest.xml
luacore/src/main/jni/: CMakeLists.txt  cn_vimfung_luascriptcore_LuaNativeUtil.cpp  cn_vimfung_luascriptcore_LuaNativeUtil.h
luacore/src/main/jni/lua-common/: LuaContext.h  LuaEngineAdapter.cpp  LuaEngineAdapter.hpp  LuaExportsTypeManager.cpp  LuaExportsTypeManager.hpp  LuaPointer.cpp  LuaSession.h  LuaValue.h
luaframework/: build.gradle
luaframework/src/main/: AndroidManifest.xml
luaframework/src/main/res/values/: strings.xml
(+238 files in other folders)
